test-expected/large/scheduler/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: scheduler
    foo.com/duversion: 3.6.33-20190820.1566264420533
    foo.com/version: 3.6.33
  labels:
    app.kubernetes.io/name: scheduler
    helm.sh/chart: scheduler-3.6.33
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scheduler
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: scheduler
        app.kubernetes.io/name: scheduler
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-scheduler:3.6.33-20190820.1566264420533
        imagePullPolicy: IfNotPresent
        name: scheduler
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
